--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="card" style="width: 10rem; height: 9.5rem;">
-                    <img class="card-img-top" style="margin-top: -5px;" src="{{imageSrc}}" alt="Card image cap">
+                    <img class="card-img-top" style="margin-top: -5px;" src="{{images[0].value}}" alt="Card image cap">
                     <div class="card-body">
                       
                      
