--- a/src/app/background/background.component.html
+++ b/src/app/background/background.component.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="card" style="width: 10rem; height: 9.5rem;">
+                  <div class="card animate" style=" margin-left: 7rem; width: 10rem; height: 9.5rem;">
                     <img class="card-img-top" style="margin-top: -5px;" src="{{images[0].value}}" alt="Card image cap">
                     <div class="card-body">
                       
